--- a/FoodOrder/FoodOrder.Core/FoodOrder.Core.csproj
+++ b/FoodOrder/FoodOrder.Core/FoodOrder.Core.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="PieChart.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Users.cs" />
     <Compile Include="VotingCheck.cs" />
